--- a/main.ipynb
+++ b/main.ipynb
@@ -22,8 +22,20 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-style: italic\">                                                   File Metadata                                                   </span>\n",
-       "┌────────────────────────┬────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">File Metadata</span> <span style=\"color: #008080; text-decoration-color: #008080\">────────────────────────────────────────</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36mFile Metadata\u001b[0m \u001b[36m────────────────────────────────────────\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┌────────────────────────┬────────────────────────────────────────────────────────────────────────────────────────┐\n",
        "│<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\"> Field                  </span>│<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\"> Value                                                                                  </span>│\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
        "│ File name              │ TSLA_1m_7d_20260224_204939.csv                                                         │\n",
@@ -36,7 +48,7 @@
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
        "│ Export time            │ 20:49:39                                                                               │\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
-       "│ File age               │ 0:11:23.856324                                                                         │\n",
+       "│ File age               │ 0:25:10.828305                                                                         │\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
        "│ Stock data source      │ /Users/kristopherpepper/Documents/jupyterProjects/historicalStockDataDownload/download │\n",
        "│                        │ s/TSLA_1m_7d_20260224_204939.csv                                                       │\n",
@@ -44,7 +56,6 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3m                                                   File Metadata                                                   \u001b[0m\n",
        "┌────────────────────────┬────────────────────────────────────────────────────────────────────────────────────────┐\n",
        "│\u001b[1;36m \u001b[0m\u001b[1;36mField                 \u001b[0m\u001b[1;36m \u001b[0m│\u001b[1;36m \u001b[0m\u001b[1;36mValue                                                                                 \u001b[0m\u001b[1;36m \u001b[0m│\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
@@ -58,7 +69,7 @@
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
        "│ Export time            │ 20:49:39                                                                               │\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
-       "│ File age               │ 0:11:23.856324                                                                         │\n",
+       "│ File age               │ 0:25:10.828305                                                                         │\n",
        "├────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
        "│ Stock data source      │ /Users/kristopherpepper/Documents/jupyterProjects/historicalStockDataDownload/download │\n",
        "│                        │ s/TSLA_1m_7d_20260224_204939.csv                                                       │\n",
@@ -71,8 +82,20 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-style: italic\">       Stock Metadata        </span>\n",
-       "┌───────────────────┬───────┐\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">Stock Metadata</span> <span style=\"color: #008080; text-decoration-color: #008080\">────────────────────────────────────────</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36mStock Metadata\u001b[0m \u001b[36m────────────────────────────────────────\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┌───────────────────┬───────┐\n",
        "│<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\"> Field             </span>│<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\"> Value </span>│\n",
        "├───────────────────┼───────┤\n",
        "│ Ticker            │ TSLA  │\n",
@@ -84,13 +107,10 @@
        "│ Interval unit     │ m     │\n",
        "├───────────────────┼───────┤\n",
        "│ Period            │ 7d    │\n",
-       "├───────────────────┼───────┤\n",
-       "│ Is max history    │ False │\n",
        "└───────────────────┴───────┘\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3m       Stock Metadata        \u001b[0m\n",
        "┌───────────────────┬───────┐\n",
        "│\u001b[1;36m \u001b[0m\u001b[1;36mField            \u001b[0m\u001b[1;36m \u001b[0m│\u001b[1;36m \u001b[0m\u001b[1;36mValue\u001b[0m\u001b[1;36m \u001b[0m│\n",
        "├───────────────────┼───────┤\n",
@@ -103,8 +123,6 @@
        "│ Interval unit     │ m     │\n",
        "├───────────────────┼───────┤\n",
        "│ Period            │ 7d    │\n",
-       "├───────────────────┼───────┤\n",
-       "│ Is max history    │ False │\n",
        "└───────────────────┴───────┘\n"
       ]
      },
@@ -114,11 +132,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #00ff00; text-decoration-color: #00ff00\">────────────────────────────────────────────────────── </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">CHART</span><span style=\"color: #00ff00; text-decoration-color: #00ff00\"> ──────────────────────────────────────────────────────</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">Chart</span> <span style=\"color: #008080; text-decoration-color: #008080\">────────────────────────────────────────</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[92m────────────────────────────────────────────────────── \u001b[0m\u001b[1;36mCHART\u001b[0m\u001b[92m ──────────────────────────────────────────────────────\u001b[0m\n"
+       "\u001b[1;36mChart\u001b[0m \u001b[36m────────────────────────────────────────\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -141,17 +159,18 @@
     "from utils.build_stock_metadata_rows import build_stock_metadata_rows\n",
     "from utils.parse_stock_filename_metadata import parse_stock_filename_metadata\n",
     "from utils.plot_compressed_trading_chart import plot_compressed_trading_chart\n",
-    "from utils.print_header import print_header\n",
+    "from utils.print_h1 import print_h1\n",
+    "from utils.print_h2 import print_h2\n",
     "from utils.print_metadata_tables import print_metadata_tables\n",
     "\n",
     "metadata = parse_stock_filename_metadata(stock_data_location)\n",
     "file_metadata_rows = build_file_metadata_rows(metadata, stock_data_location)\n",
     "stock_metadata_rows = build_stock_metadata_rows(metadata)\n",
     "\n",
-    "print_header(\"SOURCE DATA OVERVIEW\")\n",
+    "print_h1(\"SOURCE DATA OVERVIEW\")\n",
     "print_metadata_tables(file_metadata_rows, stock_metadata_rows)\n",
     "\n",
-    "print_header(\"CHART\")\n",
+    "print_h2(\"Chart\")\n",
     "plot_compressed_trading_chart(\n",
     "    csv_path=stock_data_location,\n",
     "    ticker=metadata[\"ticker\"],\n",
